--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -54,7 +54,12 @@
 										Address
 								</textarea
 								</td></tr>
+								<tr> <td>
+								<input type='file' accept='image/*' onchange='openFile(event)'/></td></tr>
+							<tr><td>
+							<img id ="output" src="noImage.jpg" width="152" height="229"></img></td></tr>
 						</table>
+						
 					</section>		
 			</form>  	
 		<button onclick="saveUserDetails()">Save</button>
