--- a/FeedAndProfile.html
+++ b/FeedAndProfile.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>"
-<table id = "header" name = "header" bgcolor="grey" align="center" width="1450px">
+<table id = "header" name = "header" bgcolor="#F9FBF5" align="center" width="1450px">
 <tr><td>
 <h3 align = "center">My Book</h3></td></tr>
 </table>
