--- a/SignInPage.html
+++ b/SignInPage.html
@@ -7,7 +7,7 @@ A Sample Feed Application....
 <style>
 header
 {
-background-color:grey;
+background-color:#F9FBF5;
     color:white;
     text-align:left;
     padding:5px;	 
